example/error/typemismatch.m
int a = 2
double b = 2.3
a = b